<resources>
    // Total
    <string name="appName" translatable="false">OUFA</string>
    <string name="developerName">Mahdi Davoodi</string>
    <string name="appDescription">There is no limit for playing football.</string>
    <string name="welcomeToFIFA">Welcome to our FIFA!</string>

    // Start Page.
    <string name="startDescriptionText">You can create owners and then select teams for them to start the competition.</string>

    // Create Owners Page.
    <string name="createOwnersDescriptionText">Now, you have to create your local account to manage your clubs.</string>
    <string name="createOwnersFirstOwnerText">First Owner</string>
    <string name="createOwnersSecondOwnerText">Second Owner</string>

    // Select Clubs Page.
    <string name="selectClubsDescriptionText">Each owner can only select 10 clubs.Choose one by one!</string>
    <string name="selectClubsOfTenText">%1$d/10</string>
    <string name="selectClubsClubBudgetText" translatable="false">Budget: %1$d million$</string>
    <string name="selectClubsClassText" translatable="false">Class: %1$s</string>

    // Main Page.
    <string name="mainNavigationMatches">Matches</string>
    <string name="mainNavigationTransfer">Transfer</string>
    <string name="mainNavigationCups">Cups</string>

    // Statistics Page.
    <string name="statisticsStandingsButton">Season</string>
    <string name="statisticsOwnersButton">Owners</string>
    <string name="statisticsClubsButton">Clubs</string>
    <string name="statisticsDescriptionText">All statistics about current season, owners and clubs.</string>

    // Info Page.
    <string name="developer_info">Hey There! My name is Mahdi and I am a junior Android developer. I created this app for me and my brother. Our FIFA, established back in 2015 :). Hope you can find it useful and enjoy it!</string>

    // Lists Titles.
    <string name="season_points" translatable="false">Pts</string>
    <string name="season_goalDifference" translatable="false">GD</string>
    <string name="season_draw" translatable="false">D</string>
    <string name="season_loss" translatable="false">L</string>
    <string name="season_win" translatable="false">W</string>
    <string name="season_match_played" translatable="false">Pl</string>
    <string name="season_team_name" translatable="false">Team</string>

    <string name="club_description" translatable="false">Club / Budget / MT / TM / Champions / Europe / Golden.</string>
    <string name="owner_description" translatable="false">Owner / Win / Loss / Draw / Cups.</string>
    <string name="season_description" translatable="false">Team / Pl / W / L / D / GD / Pts.</string>


    // Toasts.
    <string name="createOwnersToast1">Please input your information!</string>
    <string name="createOwnersToast2">Password does not match!</string>
    <string name="createOwnersToast3">Now, lets create second owner!</string>
    <string name="createOwnersToast4">Owners Created.</string>
    <string name="playToast1">Please input the goals!</string>
    <string name="infoToast">You don\'t have Myket installed!</string>

    // Objects Descriptions
    <string name="imageView" translatable="false">Image</string>
    <string name="TextView" translatable="false">Text</string>
    <string name="ImageButton" translatable="false">Image Button</string>

    // Hints.
    <string name="nameHint">Name</string>
    <string name="passwordHint">Password</string>
    <string name="numberHint">Number</string>
    <string name="confirmPasswordHint">Confirm Password</string>

    // Transfer Page.
    <string name="transferDescriptionText">You can simply record your transfer history and see it again in history page.</string>

    // Matches Page.
    <string name="matchesPlayNextButton">Play</string>
    <string name="matchesNotPlayed">-TBD-</string>
    <string name="matchesStatisticsButton">Statistics</string>
    <string name="matchesDescriptionText">You can add or see matches results here.</string>

    // Play Page.
    <string name="playDescriptionText">Please input the Home/Away teams goals and press save button.</string>
    <string name="playHomeText">Home</string>
    <string name="playAwayText">Away</string>
    <string name="playSeasonText">Season %1$d.</string>

    // New Transfer Page.
    <string name="nt_descriptionText">Please enter the information correctly and in order! (Scroll down)</string>
    <string name="nt_descriptionText2">Do not forget to save. Also please insert the player full name. Note that 10% tax will apply.</string>
    <string name="nt_playerInfo">Player Info</string>

    // Transfer History Page.
    <string name="th_descriptionText">You can see all of your transfers in here. From latest to oldest. Also Transfer window is open for every season 20 first game.</string>


    // Slides Page
    <string name="slides_text1">Hey, here some information about this app.</string>
    <string name="slides_text2">Clubs</string>
    <string name="slides_text3">28 clubs included. Only 20 clubs get involved in leagues.</string>
    <string name="slides_text4">Transfers</string>
    <string name="slides_text5">Player price calculate from his overall. Like this(overall = X): 0–86 = X, 87–90 = 2X, 91–95 = 5X, 95–100 = 10X.</string>
    <string name="slides_text6">MT</string>
    <string name="slides_text7">Contains 20 teams(10 from each owner). Every club will receive a prize depends on their standing on the table.</string>
    <string name="slides_text8">TM</string>
    <string name="slides_text9">Contains 8 teams(Owner-Free). In this league it does not matter who is the owner, we choose to control any team we want in every match.(Cup Format). Winner gets 40 million.</string>
    <string name="slides_text10">Champions</string>
    <string name="slides_text11">Contains 8 teams(Owner-Free, Cup format). Winner gets 200 million.</string>
    <string name="slides_text12">Europe</string>
    <string name="slides_text13">Match between winner of TM and winner of Champions. Winner gets 70 million.</string>
    <string name="slides_text14">Golden</string>
    <string name="slides_text15">Match between winner of Champions and MT (If it was same, 1st and 2nd in MT.). Winner gets 100 million.</string>
    <string name="slides_text16">Money Control</string>
    <string name="slides_text17">Every 5 Seasons, all clubs will lose 30% of their property.</string>

    // Settings Page
    <string name="settings_title">Settings</string>

    // Common Text
    <string name="history">History</string>
    <string name="overall">Overall</string>
    <string name="age">Age</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="newText">New</string>
    <string name="next">Next</string>
    <string name="goals">Goals</string>
    <string name="season">Season: %1d</string>
    <string name="winner">Winner: %1s</string>
    <string name="skip">Skip</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="rules">Rules</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="info">Info</string>
    <string name="dollar" translatable="false">%1$d$</string>
    <string name="million_dollar" translatable="false">%1$d million$</string>
    <string name="match_result" translatable="false">%1$d - %2$d</string>

    // Version Control.
    <string name="version">version 1.1.1</string>
    <string name="last_update">Last Update: June, 2021.</string>

</resources>