<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.InfoPage">

    <TextView
        android:id="@+id/info_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/ethnocentric"
        android:text="@string/developerName"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/mainBigTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:padding="10dp"
        android:text="@string/developer_info"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_app_name"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/info_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:padding="10dp"
        android:text="@string/last_update"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_tv_1" />

    <TextView
        android:id="@+id/info_tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:padding="10dp"
        android:text="@string/version"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        app:layout_constraintEnd_toEndOf="@+id/info_tv_2"
        app:layout_constraintStart_toStartOf="@+id/info_tv_2"
        app:layout_constraintTop_toBottomOf="@+id/info_tv_2" />

    <ImageButton
        android:id="@+id/info_github"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="45dp"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:contentDescription="@string/ImageButton"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:onClick="openGithub"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/info_tv_3"
        app:layout_constraintStart_toStartOf="@+id/info_tv_3"
        app:layout_constraintTop_toBottomOf="@+id/info_tv_3"
        app:srcCompat="@drawable/ic_github" />
</androidx.constraintlayout.widget.ConstraintLayout>