<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/transferMainImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:contentDescription="@string/imageView"
        app:srcCompat="@drawable/ic_transfer" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/transferHistoryButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/mainButtonColor"
            android:fontFamily="@font/main_font"
            android:text="@string/history"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/mainButtonTextColor"
            android:textDirection="ltr"
            android:textSize="@dimen/normalButton" />

        <Button
            android:id="@+id/transferNewButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:autoSizeTextType="uniform"
            android:backgroundTint="@color/mainButtonColor"
            android:fontFamily="@font/main_font"
            android:onClick="transferNewOnClick"
            android:text="@string/newText"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/mainButtonTextColor"
            android:textDirection="ltr"
            android:textSize="@dimen/normalButton" />
    </LinearLayout>

    <TextView
        android:id="@+id/transferDescriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:padding="20dp"
        android:text="@string/transferDescriptionText"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_2" />
</LinearLayout>