<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr"
    tools:context=".pages.PlayPage">

    <TextView
        android:id="@+id/playDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:padding="20dp"
        android:text="@string/playDescriptionText"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playHomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:text="@string/playHomeText"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_3_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playDescriptionText" />

    <TextView
        android:id="@+id/playAwayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:text="@string/playAwayText"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_3_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playDescriptionText" />

    <ImageView
        android:id="@+id/playHomeImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:contentDescription="@string/imageView"
        android:maxWidth="180dp"
        android:maxHeight="180dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/playHomeText"
        app:layout_constraintStart_toStartOf="@+id/playHomeText"
        app:layout_constraintTop_toBottomOf="@+id/playHomeText"
        app:srcCompat="@drawable/club1" />

    <ImageView
        android:id="@+id/playAwayImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="20dp"
        android:adjustViewBounds="true"
        android:background="@color/transparent"
        android:contentDescription="@string/imageView"
        android:maxWidth="180dp"
        android:maxHeight="180dp"
        android:minWidth="100dp"
        android:minHeight="100dp"
        android:padding="10dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="@+id/playAwayText"
        app:layout_constraintStart_toStartOf="@+id/playAwayText"
        app:layout_constraintTop_toBottomOf="@+id/playAwayText"
        app:srcCompat="@drawable/club1" />

    <TextView
        android:id="@+id/playSeasonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/main_font"
        android:padding="5dp"
        android:text="@string/playSeasonText"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playHomeImage" />

    <TextView
        android:id="@+id/playLeagueText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/main_font"
        android:padding="5dp"
        android:text="@string/TextView"
        android:textAlignment="center"
        android:textColor="@color/mainBigTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_0_5"
        app:layout_constraintEnd_toEndOf="@+id/playSeasonText"
        app:layout_constraintStart_toStartOf="@+id/playSeasonText"
        app:layout_constraintTop_toBottomOf="@+id/playSeasonText" />

    <EditText
        android:id="@+id/playHomeInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autofillHints="@string/numberHint"
        android:background="@drawable/edit_text_background_1"
        android:ems="5"
        android:fontFamily="@font/main_font"
        android:hint="@string/goals"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        android:textColorHint="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playLeagueText" />

    <EditText
        android:id="@+id/playAwayInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autofillHints="@string/numberHint"
        android:background="@drawable/edit_text_background_1"
        android:ems="5"
        android:fontFamily="@font/main_font"
        android:hint="@string/goals"
        android:inputType="number"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        android:textColorHint="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/text_size_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playLeagueText" />

    <Button
        android:id="@+id/playSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autoSizeTextType="uniform"
        android:backgroundTint="@color/mainButtonColor"
        android:fontFamily="@font/main_font"
        android:text="@string/save"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/mainButtonTextColor"
        android:textDirection="ltr"
        android:textSize="@dimen/normalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAwayInput" />

</androidx.constraintlayout.widget.ConstraintLayout>