<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pages.LoadingPage"
    android:layoutDirection="ltr">


    <TextView
        android:id="@+id/loadingAppNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/base05"
        android:text="@string/appName"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/mainBigTextColor"
        android:textDirection="ltr"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loadingdeveloperNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/developerName"
        android:textAlignment="center"
        android:textColor="@color/mainDescriptionTextColor"
        android:textDirection="ltr"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loadingAppNameText"
        app:layout_constraintVertical_bias="0.961" />

    <TextView
        android:id="@+id/loadingAppDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/appDescription"
        android:textAlignment="center"
        android:textColor="@color/mainTextColor"
        android:textDirection="ltr"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/loadingAppNameText"
        app:layout_constraintStart_toStartOf="@+id/loadingAppNameText"
        app:layout_constraintTop_toBottomOf="@+id/loadingAppNameText" />
</androidx.constraintlayout.widget.ConstraintLayout>