<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="40dp"
        app:cardElevation="3dp"
        app:cardMaxElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cups_seasonText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/main_font"
                android:padding="5dp"
                android:text="@string/season"
                android:textAlignment="center"
                android:textColor="@color/mainDescriptionTextColor"
                android:textDirection="ltr"
                android:textSize="@dimen/text_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cups_image"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toEndOf="@+id/cups_titleText"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/cups_titleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/main_font"
                android:padding="5dp"
                android:text="@string/TextView"
                android:textAlignment="center"
                android:textColor="@color/mainBigTextColor"
                android:textDirection="ltr"
                android:textSize="@dimen/text_size_3_5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cups_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="25dp"
                android:adjustViewBounds="true"
                android:background="@color/transparent"
                android:contentDescription="@string/imageView"
                android:maxWidth="150dp"
                android:maxHeight="150dp"
                android:minWidth="50dp"
                android:minHeight="50dp"
                android:padding="10dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/club1" />

            <TextView
                android:id="@+id/cups_winnerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/main_font"
                android:padding="5dp"
                android:text="@string/winner"
                android:textAlignment="center"
                android:textColor="@color/mainDescriptionTextColor"
                android:textDirection="ltr"
                android:textSize="@dimen/text_size_1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cups_seasonText"
                app:layout_constraintStart_toStartOf="@+id/cups_seasonText"
                app:layout_constraintTop_toBottomOf="@+id/cups_seasonText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>